--- a/react-ui/src/App.css
+++ b/react-ui/src/App.css
@@ -1,15 +1,8 @@
-.App {
-  text-align: center;
-}
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.App-intro {
+  font-size: small;
 }
