--- a/react-ui/src/components/Header.css
+++ b/react-ui/src/components/Header.css
@@ -1,12 +1,13 @@
+
 .App-logo {
     animation: App-logo-spin infinite 20s linear;
     height: 80px;
   }
   
   .App-header {
-    background-color: #222;
-    height: 150px;
-    padding: 40px;
-    color: white;
+    background-color: #eae8ff;
+    height: 40px;
+    /* padding: 5px; */
+    /* color: white; */
   }
   
