--- a/react-ui/src/components/Title.css
+++ b/react-ui/src/components/Title.css
@@ -1,8 +1,7 @@
 .Title-Style{
-    color: yellowgreen;
-    font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI",
-      "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-      "Helvetica Neue", sans-serif;
+    color: #2A2373;
+    text-align: center;
+    font-size: 23px;
+    font-family: Arial, Helvetica, sans-serif
   }
  
-  
